--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: DAA Portfolio
 description: A description of your portfolio or the purpose of your site.
-theme: ekyll-theme-Modernist
+theme: ekyll-theme-cayman
